Refactor using Google Code Style